2013-07-12  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Switch to use arc-gdb-mainline for GDB
	development.

2013-07-12  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* arc-clone-all.sh: More comprehensive version of the script.
	* README.md: Use HTTPS versions of repository URLs.

2013-07-17  Simon Cook  <simon.cook@embecosm.com>

	* build-all.sh: Add --disable-werror and --no-disable-werror options.
	* build-elf32.sh: Add DISABLEWERROR to configure.
	* build-uclibc.sh: Likewise.

2013-07-12  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* build-all.sh: Don't symlink-all newlib, instead just symlink the
	top level directories.

2013-07-10  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* build-elf32.sh: Remove --disable-werror from configuration.
	* build-uclibc.sh: Likewise.

2013-07-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* README.md: Updated for mainline branch.

2013-07-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* build-kernel.sh: Use define-release.sh and associated
	environment variables.

2013-07-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* define-release.sh: Change release to mainline.

2013-07-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* build-elf32.sh: Add comment regarding CFLAGS_FOR_TARGET.

2013-07-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* ChangeLog: Correct errors from cherry-picking copyright updates.

2013-07-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* ChangeLog: Correct errors from cherry-picking arc-clone-all.sh.

2013-07-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* avr-versions.sh: Use mainline version for binutils and 4.8
	versions for all else, during migration.

2013-07-03  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	Based on an idea from Christian Ruppert
	<christian.ruppert@abilis.com>

	* build-all.sh: Add --uclibc-defconfig option, setting
	UCLIBC_DEFCFG environment variable.
	* build-uclibc.sh: Use UCLIBC_DEFCFG environment variable to